changes and fixes

--- a/src/components/AdvancedFeatureCard/AdvancedFeatureCard.scss
+++ b/src/components/AdvancedFeatureCard/AdvancedFeatureCard.scss
@@ -80,6 +80,9 @@
                 padding-bottom: 0;
                 overflow: hidden;
             }
+            .advanced-feature-image {
+                max-width: 229px;
+            }
         }
         
         .advanced-feature-image {
