--- a/src/components/ServiceCard/ServiceCard.scss
+++ b/src/components/ServiceCard/ServiceCard.scss
@@ -1,10 +1,18 @@
+@use "../../styles/base/variables";
 .service-card {
     background: #fff;
     border-radius: 8px;
     padding: 49px 20px 48px 32px;
     margin-bottom: 20px;
+    position: relative;
+    display: block;
     @media(max-width:767px) {
         margin-bottom: 10px;
+    }
+    &:hover {
+        .service-card-link {
+            opacity: 1;
+        }
     }
     img {
         margin-bottom: 20px;
@@ -18,5 +26,20 @@
     
     p {
         padding-right: 10px;
+    }
+    .service-card-link {
+        position: absolute;
+        right: 32px;
+        top: 87px;
+        font-size: 14px;
+        font-weight: 500;
+        opacity: 0;
+        transition: 0.3s;
+        color: variables.$heading-color;
+        img {
+            margin-bottom: 0;
+            vertical-align: -3px;
+            margin-left: 2px;
+        }
     }
 }
