--- a/src/pages/ServicePage/ServicePage.scss
+++ b/src/pages/ServicePage/ServicePage.scss
@@ -184,7 +184,7 @@
         p {
             line-height: 23px;
         }
-        img {
+        & > img {
             width: 73px;
             margin-top: 10px;
         }
