--- a/src/sections/FeesTransactions/FeesTransactions.scss
+++ b/src/sections/FeesTransactions/FeesTransactions.scss
@@ -30,7 +30,7 @@
         border-radius: 8px;
         cursor: pointer;
         transition: 0.3s;
-        &.active {
+        &.active, &:hover {
             background: #fff;
         }
         img {
