fixes and changes 2

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -195,6 +195,7 @@
         .col:last-child {
             text-align: right;
             @media(max-width:767px) {
+                order: -1;
                 text-align: center;
             }
         }
