--- a/src/sections/AdvancedFeatures/AdvancedFeatures.scss
+++ b/src/sections/AdvancedFeatures/AdvancedFeatures.scss
@@ -1,4 +1,5 @@
 .section-advanced-features {
+    overflow-x: hidden;
     .section-header {
         margin-bottom: 24px;
         @media(max-width:767px) {
