--- a/src/sections/Testimonials/Testimonials.scss
+++ b/src/sections/Testimonials/Testimonials.scss
@@ -1,4 +1,5 @@
 .section-testimonials {
+    overflow-x: hidden;
     .section-header {
         margin-bottom: 24px;
         @media(max-width:767px) {
