--- a/src/components/FeeCalculator/FeeCalculator.scss
+++ b/src/components/FeeCalculator/FeeCalculator.scss
@@ -64,6 +64,7 @@
             white-space: nowrap;
         }
         input {
+            max-width: 180px;
             @media (max-width:1280px) {
                 width: 80px;
             }
