--- a/src/pages/BlogArticle/BlogArticle.scss
+++ b/src/pages/BlogArticle/BlogArticle.scss
@@ -157,3 +157,45 @@
         }
     }
 }
+
+.blog-article-wrapper {
+    @media(max-width: 1023px) {
+        flex-direction: column;
+    }
+    .col-left {
+        flex: 0 0 400px;
+        padding-right: 30px;
+        @media(max-width: 1023px) {
+            flex: auto;
+            padding-right: 10px;
+        }
+    }
+}
+
+.table-of-contents {
+    background: #fff;
+    border-radius: 12px;
+    padding: 30px 30px;
+    margin-top: 51px;
+    position: sticky;
+    top: 120px;
+    h5 {
+        margin-bottom: 30px;
+    }
+    li {
+        margin-bottom: 20px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+        &.active {
+            a {
+                color: variables.$heading-color;
+                font-weight: 600;
+            }
+        }
+        a {
+            font-size: 14px
+        }
+        
+    }
+}
