fixes and changes 3

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -221,6 +221,13 @@
             }
         }
     }
+
+    .copyright-link {
+        text-decoration: underline;
+    }
+    .icon-globe {
+        width: 12px;
+    }
 }
 
 .footer-contact {
