--- a/src/pages/SignUp1/SignUp1.scss
+++ b/src/pages/SignUp1/SignUp1.scss
@@ -27,7 +27,8 @@
     }
     @media(max-width:767px) {
         max-width: calc(100% - 31px);
-        margin-top: 10px;
+        margin-top: 70px;
         padding: 18px 17px 13px;
+        margin-bottom: 70px;
     }
 }
