--- a/src/pages/WhatIsEscrowly/WhatIsEscrowly.scss
+++ b/src/pages/WhatIsEscrowly/WhatIsEscrowly.scss
@@ -5,6 +5,14 @@
         max-width: none;
         flex: 0 0 65%;
         padding-right: 40px;
+        @media(max-width: 1365px) {
+            flex: 0 0 62%;
+        }
+        @media(max-width: 1023px) {
+            flex: 0 0 100%;
+            padding-right: 10px;
+            margin-bottom: 50px;
+        }
     }
     .links-nav {
         flex: 0 0 17.9%;
@@ -16,7 +24,7 @@
         align-items: flex-start;
         @media(max-width:767px) {
             flex: 0 0 100%;
-            flex-direction: row;
+            flex-direction: column;
             overflow-x: auto;
             max-width: 100%;
             margin-bottom: 32px;
@@ -36,13 +44,7 @@
             cursor: pointer;
             color: variables.$dark-blue-60;
             @media(max-width:767px) {
-                font-size: 16px;
-                padding-right: 14px;
-                padding-left: 12px;
-                padding-bottom: 14px;
-                margin-bottom: 0px;
-                position: relative;
-                border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+
             }
             &.active {
                 border-bottom: 2px solid variables.$blue;
@@ -61,13 +63,37 @@
     .fee-calculator .form-input {
         flex: 0 0 29.5%;
         max-width: 29.5%;
+        @media(max-width: 1023px) {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
     }
     
     .dropdown.dropdown-coin {
         flex: 0 0 64.1%;
+        @media(max-width: 1365px) {
+            flex: 0 0 69.1%;
+        }
+        @media(max-width: 1023px) {
+            flex: 0 0 100%;
+        }
+        &:after {
+            @media(max-width: 1365px) {
+                right: -8px;
+            }
+            @media(max-width: 1023px) {
+                right: 14px;
+            }
+        }
     }
     .dropdown.dropdown-domain {
         flex: 0 0 69%;
+        @media(max-width: 1365px) {
+            flex: 0 0 67%;
+        }
+        @media(max-width: 1023px) {
+            flex: 0 0 100%;
+        }
     }
     .links-nav-title {
         margin-bottom: 20px;
