--- a/src/styles/components/_mobile-menu.scss
+++ b/src/styles/components/_mobile-menu.scss
@@ -48,6 +48,12 @@
         border-radius: 8px;
         padding: 5px 15px 8px;
         margin-bottom: 154px;
+        .selected-language {
+            color: #fff;
+            &:after {
+                background-image: url(../../assets/img/chevron-down-white.svg);
+            }
+        }
     }
     .menu-label {
         color: variables.$blue-50;
@@ -72,7 +78,7 @@
         font-size: 14px;
         letter-spacing: -0.5px;
         line-height: 1.5;
-        margin: 0 -1px;
+        margin: 0 -10px;
         a {
             text-decoration: underline;
         }
