--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,7 @@
-
 //Base
 
 @use "base/variables";
+@use "base/mixins";
 @use "base/base";
 @use "base/reset";
 @use "base/typography";
@@ -12,10 +12,10 @@
 
 // @use "layout/header";  
 @use "layout/footer";
- 
+
 // // Components
-   
-@use "components/main-menu"; 
-@use "components/buttons"; 
+
+@use "components/main-menu";
+@use "components/buttons";
 @use "components/secondary-menu";
-@use "components/mobile-menu";  
+@use "components/mobile-menu";
