--- a/src/components/SectionHeader/SectionHeader.scss
+++ b/src/components/SectionHeader/SectionHeader.scss
@@ -1,19 +1,33 @@
+@use "../../styles/base/variables";
+@use "../../styles/base/mixins";
+
 .section-header {
     margin-bottom: 20px;
+
+    @media(max-width:767px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     &.small-title {
         .section-title {
             font-size: 30px;
+
             @media(max-width: 767px) {
                 font-size: 24px;
             }
         }
     }
+
     &.centered {
         text-align: center;
     }
+
     .section-word {
         display: inline-block;
         margin-right: 7px;
+
         span {
             display: inline-block;
         }
@@ -29,7 +43,9 @@
     padding: 5px 16px;
     letter-spacing: -0.5px;
     margin-bottom: 3px;
+
     @media(max-width:767px) {
         margin-bottom: 6px;
+        text-align: center;
     }
 }
