--- a/src/sections/Testimonials/Testimonials.scss
+++ b/src/sections/Testimonials/Testimonials.scss
@@ -1,15 +1,26 @@
 .section-testimonials {
     overflow-x: hidden;
+
     .section-header {
         margin-bottom: 24px;
+
         @media(max-width:767px) {
             margin-bottom: 30px;
         }
     }
+
     .swiper {
         padding-bottom: 36px;
+
         @media(max-width:767px) {
             padding-bottom: 28px;
+        }
+
+        .swiper-scrollbar {
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80%;
+            max-width: 800px;
         }
     }
 }
