--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,4 +1,6 @@
 @use "../base/variables";
+@use "../base/mixins";
+
 body {
     -webkit-font-smoothing: antialiased;
     background-color: variables.$body-bg;
@@ -8,9 +10,19 @@ body {
     font-size: 16px;
     line-height: 140%;
     letter-spacing: -0.55px;
+
     @media (max-width:1023px) {
         font-size: 14px;
     }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    @include mixins.mobile-text-center;
 }
 
 h1 {
@@ -18,6 +30,7 @@ h1 {
     font-weight: 500;
     line-height: 120%;
     letter-spacing: 0;
+
     @media (max-width:1280px) {
         font-size: 40px;
     }
@@ -29,9 +42,11 @@ h2 {
     line-height: 1.4;
     color: variables.$heading-color;
     letter-spacing: -0.2px;
+
     @media(max-width:1023px) {
         font-size: 32px;
     }
+
     @media(max-width:767px) {
         font-size: 24px;
         letter-spacing: -0.5px;
@@ -55,6 +70,7 @@ h5 {
     font-weight: 500;
     line-height: 1.2;
     color: variables.$heading-color;
+
     @media(max-width:767px) {
         font-size: 18px;
     }
@@ -88,9 +104,11 @@ h6 {
         position: relative;
         font-size: 14px;
         margin-bottom: 23px;
+
         @media(max-width:767px) {
             margin-bottom: 27px;
         }
+
         &:before {
             content: '';
             position: absolute;
@@ -99,17 +117,19 @@ h6 {
             background-image: url(../../assets/img/icon-check.svg);
             width: 18px;
             height: 18px;
+
             @media(max-width:767px) {
                 top: 3px;
             }
         }
+
         p {
             font-size: 16px;
             color: variables.$heading-color;
+
             @media(max-width:767px) {
                 margin-bottom: 4px;
             }
         }
     }
 }
-
