--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -164,6 +164,7 @@
         width: 100%;
         cursor: pointer;
         position: relative;
+        display: flex;
         &:before {
             content: '';
             position: absolute;
