--- a/src/components/BannerFeatureCard/BannerFeatureCard.scss
+++ b/src/components/BannerFeatureCard/BannerFeatureCard.scss
@@ -86,6 +86,11 @@
         opacity: 0;
         animation: 32s linear 0s feature-card-3 infinite;
         z-index: 1;
+        
+        h5 {
+            text-align: left;
+        }
+        
         @keyframes feature-card-3 {
             8% {
                 opacity: 0;
