--- a/src/sections/Faq/Faq.scss
+++ b/src/sections/Faq/Faq.scss
@@ -20,4 +20,9 @@
             margin-bottom: 32px;
         }
     }
+    .section-header {
+        @media(max-width: 767px) {
+            margin: auto;
+        }
+    }
 }
