--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -10,7 +10,7 @@
         flex: 0 0 100%;
         border-radius: 8px;
         height: 40px;
-        width: 100%;
+        width: 50%;
         padding: 0 12px;
         margin-bottom: 8px;
     }
@@ -52,8 +52,8 @@
         }
     }
     &.dropdown-coin {
-        margin-left: 15px; 
-        flex: 0 0 46.1%;
+       margin-left: 20px;
+        flex: 0 0 21.8%;
         @media (max-width:1280px) {
             flex: 0 0 62.1%;
             margin-left: 0;
@@ -89,8 +89,50 @@
             }
         }
     }
+    &.dropdown-coin-1 {
+        margin-right: 30px;
+        flex: 0 0 23.3%;
+        @media (max-width:1280px) {
+            flex: 0 0 62.1%;
+            margin-left: 0;
+        }
+        @media (max-width:1023px) {
+            flex: 0 0 100%;
+            padding-left: 4px;
+        }
+        &:after {
+            right: 0;
+            @media (max-width:1023px) {
+                right: 15px;
+            }
+        }
+        .dropdown-list {
+            min-width: 198px;
+            left: -4px;
+            right: 0;
+            li {
+                display: flex;
+                align-items: center;
+            }
+        }
+        .selected, .currency-item {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+          
+            .fi {
+                width: 24px;
+                height: 24px;
+                flex-shrink: 0;
+                display: inline-flex
+                ;
+                    justify-content: center;
+                    align-items: center;
+            }
+        }
+    }
     &.dropdown-domain {
-        flex: 0 0 70%;
+        flex: 0 0 67%;
         padding-left: 19px;
         @media (max-width:1280px) {
             padding-left: 10px;
