--- a/src/components/FeeCalculator/FeeCalculator.scss
+++ b/src/components/FeeCalculator/FeeCalculator.scss
@@ -32,6 +32,7 @@
         }
     }
     .from-separator {
+        margin-right: 10px;
         height: 40px;
         background: variables.$grey-20;
         width: 2px;
@@ -44,8 +45,8 @@
         align-items: center;
         letter-spacing: -0.6px;
         display: flex;
-        flex: 0 0 48.7%;
-        max-width: 48.7%;
+        flex: 0 0 38.7%;
+        max-width: 38.7%;
         @media (max-width:1280px) {
             flex: 0 0 35.7%; 
         }
@@ -56,15 +57,21 @@
             height: 40px;
             width: 100%;
             margin-bottom: 8px;
-            padding-left: 12px;
+            padding-left: 2px;
             max-width: 100%;
         }
         span {
             margin-right: 9px;
+            margin-left: 28px;
             white-space: nowrap;
+            @media (max-width:1023px) {
+                margin-left: 12px;
+            }
         }
+        
         input {
             max-width: 180px;
+          
             @media (max-width:1280px) {
                 width: 80px;
             }
@@ -73,6 +80,19 @@
             }
         }
     }
+    .dropdown-coin {
+        width: 100px;
+        img {
+            width: 24px;
+            height: 24px;
+            margin-right: 8px;
+        }
+        @media (max-width:1023px) {
+            width: 100%;
+            margin-bottom: 8px;
+        }
+    }
+    
     .btn {
         @media (max-width:1023px) {
             width: 100%;
