--- a/src/components/FeeCalculator/FeeCalculator2.scss
+++ b/src/components/FeeCalculator/FeeCalculator2.scss
@@ -33,6 +33,7 @@
     }
     .from-separator {
         margin-right: 10px;
+        margin-left: 1px;
         height: 40px;
         background: variables.$grey-20;
         width: 2px;
@@ -40,13 +41,23 @@
             display: none;
         }
     }
-    .form-input {
+    .from-separator2 {
+        margin-right: 10px;
+        margin-left: 10px;
+        height: 40px;
+        background: variables.$grey-20;
+        width: 2px;
+        @media (max-width:1023px) {
+            display: none;
+        }
+    }
+    .form-input2 {
         font-size: 14px;
         align-items: center;
         letter-spacing: -0.6px;
         display: flex;
-        flex: 0 0 38.7%;
-        max-width: 38.7%;
+        flex: 0 0 30.7%;
+        max-width: 30.7%;
         @media (max-width:1280px) {
             flex: 0 0 35.7%; 
         }
@@ -70,7 +81,7 @@
         }
         
         input {
-            max-width: 100px;
+            max-width: 60px;
             
             @media (max-width:1280px) {
                 width: 80px;
