--- a/src/components/FeeCalculator/FeeCalculator2.scss
+++ b/src/components/FeeCalculator/FeeCalculator2.scss
@@ -1,5 +1,16 @@
 @use "../../styles/base/variables";
 
+/* Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 .fee-calculator {
     border-radius: 12px;
     background: variables.$blue-transparent;
