--- a/src/sections/FeesTransactions/FeesTransactions.scss
+++ b/src/sections/FeesTransactions/FeesTransactions.scss
@@ -34,7 +34,7 @@
         font-size: 14px;
         letter-spacing: -0.4px;
         border-radius: 8px;
-        width: 37vw;
+        width: 650px;
         justify-content: center;
         cursor: pointer;
         transition: 0.3s;
