--- a/src/components/ServiceCard/ServiceCard.scss
+++ b/src/components/ServiceCard/ServiceCard.scss
@@ -9,11 +9,11 @@
     @media(max-width:767px) {
         margin-bottom: 10px;
     }
-    &:hover {
-        .service-card-link {
-            opacity: 1;
-        }
-    }
+    // &:hover {
+    //     .service-card-link {
+    //         opacity: 1;
+    //     }
+    // }
     img {
         margin-bottom: 20px;
     }
