--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -68,6 +68,7 @@
             position: relative;
             display: flex;
             align-items: center;
+            letter-spacing: 0.8px;
 
             .tm {
                 font-size: 16px;
